--- a/customcss.css
+++ b/customcss.css
@@ -134,4 +134,47 @@
       height: 482px;
     }
   }
+
+  @media (min-width: 744px) {
+    .footer-list {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
+  .footer-list > li {
+    margin-top: 12px;
+    line-height: 20px;
+  }
+
+  @media (min-width: 744px) {
+    .footer-list > li {
+      flex-basis: 33.333333333333336%;
+      padding-right: 12px;
+    }
+  }
+
+  .footer-section {
+    padding-bottom: 24px;
+    margin-bottom: 24px;
+    border-bottom: 1px solid #dddddd;
+  }
+
+  @media (min-width: 1128px) {
+    .footer-four-column {
+      display: flex;
+    }
+  }
+
+  @media (min-width: 1128px) {
+    .footer-list {
+      display: block;
+    }
+  }
+
+  @media (min-width: 1128px) {
+    .footer-section {
+      flex: 1 0 0%;
+    }
+  }
 }
