--- a/customcss.css
+++ b/customcss.css
@@ -203,4 +203,29 @@
   :-ms-input-placeholder {
     text-align: center;
   }
+
+  .map-height {
+    height: calc(100vh - 80px) !important;
+  }
+
+  .popup > .mapboxgl-popup-content {
+    padding: 0;
+    border-radius: 25px;
+    --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+      0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .popup > .mapboxgl-popup {
+    z-index: 1;
+  }
+
+  .marker-div > .mapboxgl-marker {
+    z-index: 0;
+  }
+
+  .map-container {
+    contain: content;
+  }
 }
